<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addingItem">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="169dp"
            android:background="@drawable/header_add_things"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/header_name_text_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/productsans_bold"
                android:text="@string/add_title"
                android:textColor="@color/colorWhite"
                android:textSize="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/header_name_text_sub_add"
                android:layout_width="293dp"
                android:layout_height="57dp"
                android:fontFamily="@font/productsans_light"
                android:text="@string/add_sec_title"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/header_name_text_add"
                app:layout_constraintTop_toBottomOf="@+id/header_name_text_add"
                app:layout_constraintVertical_bias="0.013" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/button_add"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_blue"
                android:text="@string/add_button_text"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="171dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_name_item"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline3">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:fontFamily="@font/productsans_reguler"
                    android:hint="Nama Barang"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="15dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_amount_item"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_name_item">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="15dp"
                    android:fontFamily="@font/productsans_reguler"
                    android:hint="Jumlah"
                    android:textSize="18dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/type_items_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/productsans_reguler"
                android:text="Satuan barang"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_amount_item" />

            <RadioGroup
                android:id="@+id/radio_group_type_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:gravity="start"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type_items_text">

                <RadioButton
                    android:id="@+id/radio_type_buah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/productsans_reguler"
                    android:text="Pcs"
                    android:textSize="18dp"
                    tools:layout_editor_absoluteX="45dp"
                    tools:layout_editor_absoluteY="429dp" />

                <RadioButton
                    android:id="@+id/radio_type_liter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/productsans_reguler"
                    android:text="Kg/Liter"
                    android:textSize="18dp"
                    tools:layout_editor_absoluteX="45dp"
                    tools:layout_editor_absoluteY="429dp" />

                <RadioButton
                    android:id="@+id/radio_type_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/productsans_reguler"
                    android:text="Box"
                    android:textSize="18dp"
                    tools:layout_editor_absoluteX="45dp"
                    tools:layout_editor_absoluteY="429dp" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/productsans_reguler"
                android:text="Status Barang"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group_type_item" />

            <RadioGroup
                android:id="@+id/radio_group_status_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:gravity="start"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/button_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.0">

                <RadioButton
                    android:id="@+id/radio_input_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/productsans_reguler"
                    android:text="Barang Masuk"
                    android:textSize="18dp"
                    tools:layout_editor_absoluteX="45dp"
                    tools:layout_editor_absoluteY="429dp" />

                <RadioButton
                    android:id="@+id/radio_output_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/productsans_reguler"
                    android:text="Barang Keluar"
                    android:textSize="18dp"
                    tools:layout_editor_absoluteX="45dp"
                    tools:layout_editor_absoluteY="429dp" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>